k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: smart-rental
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: kivindu744/auth-service:latest
          ports:
            - containerPort: 4001
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: smart-rental
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 4001
      targetPort: 4001
    - name: grpc
      port: 9001
      targetPort: 9001
