k8s/postgres-review.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service-db
  namespace: smart-rental
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service-db
  template:
    metadata:
      labels:
        app: review-service-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: review-service-db
  namespace: smart-rental
spec:
  selector:
    app: review-service-db
  ports:
    - port: 5432
      targetPort: 5432
