k8s/property-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: property-service
  namespace: smart-rental
spec:
  replicas: 1
  selector:
    matchLabels:
      app: property-service
  template:
    metadata:
      labels:
        app: property-service
    spec:
      containers:
        - name: property-service
          image: kivindu744/property-service:latest
          ports:
            - containerPort: 4000
            - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: property-service
  namespace: smart-rental
spec:
  selector:
    app: property-service
  ports:
    - name: http
      port: 4000
      targetPort: 4000
    - name: grpc
      port: 9002
      targetPort: 9002
