k8s/review-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
  namespace: smart-rental
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
        - name: review-service
          image: kivindu744/review-service:latest
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
  namespace: smart-rental
spec:
  selector:
    app: review-service
  ports:
    - port: 4003
      targetPort: 4003
